--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <a href="#"> <i class="fa-brands fa-github"></i></a>
                 <a href="#"> <i class="fa-brands fa-google"></i></a>
             </div>
-            <a href="Lirio_Finals_FundamentalsOfAI.pdf" class="cv-btn">Download CV</a>
+            <a href="lirio.pdf" class="cv-btn">Download CV</a>
         </div>
     </section>
 
